// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================================
// USER AUTHENTICATION TABLES
// ============================================================================

model User {
  id                      String    @id @default(uuid())
  email                   String    @unique
  passwordHash            String    @map("password_hash")
  firstName               String?   @map("first_name")
  lastName                String?   @map("last_name")
  isVerified              Boolean   @default(false) @map("is_verified")
  isActive                Boolean   @default(true) @map("is_active")
  createdAt               DateTime  @default(now()) @map("created_at")
  updatedAt               DateTime  @updatedAt @map("updated_at")
  lastLogin               DateTime? @map("last_login")

  // Relations
  emailVerificationTokens EmailVerificationToken[]
  passwordResetTokens     PasswordResetToken[]
  refreshTokens           RefreshToken[]
  projects                UserProject[]

  @@map("users")
}

model EmailVerificationToken {
  id        String    @id @default(uuid())
  userId    String    @map("user_id")
  token     String    @unique
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")
  usedAt    DateTime? @map("used_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("email_verification_tokens")
}

model PasswordResetToken {
  id        String    @id @default(uuid())
  userId    String    @map("user_id")
  token     String    @unique
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")
  usedAt    DateTime? @map("used_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("password_reset_tokens")
}

model RefreshToken {
  id              String    @id @default(uuid())
  userId          String    @map("user_id")
  token           String    @unique
  expiresAt       DateTime  @map("expires_at")
  createdAt       DateTime  @default(now()) @map("created_at")
  revokedAt       DateTime? @map("revoked_at")
  replacedByToken String?   @map("replaced_by_token")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("refresh_tokens")
}

// ============================================================================
// USER PROJECTS TABLE
// ============================================================================

model UserProject {
  id          String   @id @default(uuid())
  userId      String   @map("user_id")
  projectName String   @map("project_name")
  userIdea    String   @map("user_idea") @db.Text // Text field for unlimited length
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relations
  user            User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  candidatePapers CandidatePaper[]

  @@map("user_projects")
}

// ============================================================================
// CANDIDATE PAPERS TABLE
// ============================================================================

model CandidatePaper {
  id                  String    @id @default(uuid())
  projectId           String    @map("project_id")
  
  // Basic Paper Info (Created immediately)
  paperTitle          String    @map("paper_title")
  paperAbstract       String    @map("paper_abstract") @db.Text
  paperDownloadLink   String?   @map("paper_download_link")
  
  // LLM Processing Status
  isProcessedByLlm    Boolean   @default(false) @map("is_processed_by_llm")
  
  // Semantic Similarity (Populated after processing)
  semanticSimilarity  Decimal?  @map("semantic_similarity") @db.Decimal(5, 4)
  similarityModelName String?   @map("similarity_model_name")
  
  // Overlap Analysis
  problemOverlap      String?   @map("problem_overlap") // 'high' | 'medium' | 'low'
  domainOverlap       String?   @map("domain_overlap")  // 'high' | 'medium' | 'low'
  constraintOverlap   String?   @map("constraint_overlap") // 'high' | 'medium' | 'low'
  
  // C1 Scoring (Competitor Analysis)
  c1Score             Decimal?  @map("c1_score") @db.Decimal(5, 2)
  c1Justification     String?   @map("c1_justification") @db.Text
  c1Strengths         String?   @map("c1_strengths") @db.Text
  c1Weaknesses        String?   @map("c1_weaknesses") @db.Text
  
  // C2 Scoring (Supporting Work Analysis)
  c2Score             Decimal?  @map("c2_score") @db.Decimal(5, 2)
  c2Justification     String?   @map("c2_justification") @db.Text
  c2ContributionType  String?   @map("c2_contribution_type") @db.Text
  c2RelevanceAreas    String?   @map("c2_relevance_areas") @db.Text
  
  // Gap Analysis
  researchGaps        String?   @map("research_gaps") @db.Text
  userNovelty         String?   @map("user_novelty") @db.Text
  
  // LLM Metadata
  modelUsed           String?   @map("model_used")
  inputTokensUsed     Int?      @map("input_tokens_used")
  outputTokensUsed    Int?      @map("output_tokens_used")
  processedAt         DateTime? @map("processed_at")
  
  // Timestamps
  createdAt           DateTime  @default(now()) @map("created_at")
  updatedAt           DateTime  @updatedAt @map("updated_at")
  
  // Relations
  project             UserProject @relation(fields: [projectId], references: [id], onDelete: Cascade)
  
  @@map("candidate_papers")
  @@index([projectId])
  @@index([isProcessedByLlm])
  @@index([createdAt])
}

// ============================================================================
// FUTURE TABLES (Commented out for now - uncomment when needed)
// ============================================================================

// model SavedPaper {
//   id            String   @id @default(uuid())
//   userId        String   @map("user_id")
//   projectId     String?  @map("project_id")
//   paperTitle    String   @map("paper_title")
//   paperAuthors  String?  @map("paper_authors")
//   paperYear     Int?     @map("paper_year")
//   paperVenue    String?  @map("paper_venue")
//   paperAbstract String?  @map("paper_abstract")
//   paperUrl      String?  @map("paper_url")
//   category      String?  // 'C1' or 'C2'
//   score         Decimal? @db.Decimal(4, 2)
//   notes         String?
//   createdAt     DateTime @default(now()) @map("created_at")
//
//   // Relations
//   user    User         @relation(fields: [userId], references: [id], onDelete: Cascade)
//   project UserProject? @relation(fields: [projectId], references: [id], onDelete: Cascade)
//
//   @@map("saved_papers")
// }
