@startuml paper-scoring-activity

title Paper Scoring - Activity Diagram

start

:User submits user abstract + candidate paper abstract;

:Validate input;
note right
  - Check both abstracts not empty@startuml database-er-diagram

' ============================================================================
' Literature Review System - Database ER Diagram
' ============================================================================
' This diagram shows all database tables and their relationships
' Last Updated: 2025-12-31
' ============================================================================

' Entity definitions

entity "users" as users {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(255) <<unique>>
  * password_hash : VARCHAR(255)
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  * is_verified : BOOLEAN
  * is_active : BOOLEAN
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  last_login : TIMESTAMP
}

entity "email_verification_tokens" as email_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  used_at : TIMESTAMP
}

entity "password_reset_tokens" as password_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  used_at : TIMESTAMPContinue automatically 
}

entity "refresh_tokens" as refresh_tokens {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * token : VARCHAR(255) <<unique>>
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  revoked_at : TIMESTAMP
  replaced_by_token : VARCHAR(255)
}

entity "user_projects" as projects {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * project_name : VARCHAR(255)
  * user_idea : TEXT
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

' Relationships

users ||--o{ email_tokens : "has"
users ||--o{ password_tokens : "has"
users ||--o{ refresh_tokens : "has"
users ||--o{ projects : "owns"

' Notes

note right of users
  Core user authentication table
  - Stores user credentials
  - Email verification status
  - Account active status
end note

note right of email_tokens
  Email verification workflow
  - One-time use tokens
  - Expires after 24 hours
  - Cascade delete with user
end note

note right of password_tokens
  Password reset workflow
  - One-time use tokens
  - Expires after 1 hour
  - Cascade delete with user
end note

note right of refresh_tokens
  JWT refresh token management
  - Expires after 7 days
  - Can be revoked
  - Tracks token rotation
end note

note right of projects
  User research projects
  - Stores project metadata
  - Links to user
  - Cascade delete with user
end note

@enduml

  - Check length ≤ 5000 characters each
end note

if (Valid?) then (yes)
  :Extract user ID from JWT token;
  
  :Prepare OpenAI prompt;
  note right
    Structured prompt to analyze:
    1. Semantic similarity
    2. Category (C1: competitor, C2: supporting)
    3. Research gaps
    4. Novelty of user's work
  end note
  
  :Call OpenAI API (GPT-4o-mini);
  
  if (API call successful?) then (yes)
    :Parse LLM response;
    
    :Extract scoring components;
    note right
      - semanticScore: 0-100
      - category: "C1" | "C2"
      - researchGaps: string[]
      - noveltyAnalysis: string
    end note
    
    :Calculate final score;
    note right
      Weighted scoring:
      - Semantic similarity: 40%
      - Category relevance: 30%
      - Gap significance: 30%
    end note
    
    :Return scoring analysis;
    
    :Success response (200 OK);
    
  else (no)
    if (Rate limit exceeded?) then (yes)
      :Return 429 Too Many Requests;
      stop
    else (API error)
      :Log error details;
      :Return 500 Internal Server Error;
      stop
    endif
  endif
  
else (no)
  :Return 400 Bad Request;
  note right
    Error: Invalid input
    - Abstract too long
    - Abstract empty
  end note
  stop
endif

stop

@enduml
